test/classes/generic/queryGenericField.good
queryGenericField.chpl:4: error: Query expressions are not currently supported in this context
