test/classes/generic/queryGenericField.chpl
use LinkedLists;

class R {
  var l: LinkedList(?t);
}

var myR = new R(l = new LinkedList(real));
